[gd_scene load_steps=16 format=2]

[ext_resource path="res://Objects/bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/player.gd" type="Script" id=4]
[ext_resource path="res://Assets/Art/space1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/fighter.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/ship.png" type="Texture" id=7]
[ext_resource path="res://Objects/boss.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Sound/Songs/die rich or try living (for Eric).wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/UI/DialogueBox.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 368 )

[sub_resource type="RectangleShape2D" id=4]

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 364 )
scale = Vector2( 1.25, 0.710938 )
texture = ExtResource( 5 )

[node name="player_ship" type="KinematicBody2D" parent="."]
position = Vector2( 50, 50 )
rotation = 1.5708
collision_layer = 11
collision_mask = 11
script = ExtResource( 4 )

[node name="player_hurtbox" type="CollisionShape2D" parent="player_ship"]
shape = SubResource( 1 )

[node name="player_ship_sprite" type="Sprite" parent="player_ship"]
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="player_ship"]
one_shot = true

[node name="borders" type="Node2D" parent="."]

[node name="top" type="StaticBody2D" parent="borders" groups=[
"wall",
]]
position = Vector2( 640, 0 )
collision_layer = 8
collision_mask = 2147483656

[node name="top_collision_shape" type="CollisionShape2D" parent="borders/top"]
shape = SubResource( 2 )

[node name="bottom" type="StaticBody2D" parent="borders" groups=[
"wall",
]]
position = Vector2( 640, 720 )
collision_layer = 8
collision_mask = 2147483656

[node name="bottom_collision_shape" type="CollisionShape2D" parent="borders/bottom"]
shape = SubResource( 2 )

[node name="left" type="StaticBody2D" parent="borders" groups=[
"wall",
]]
collision_layer = 8
collision_mask = 8

[node name="left_collision_shape" type="CollisionShape2D" parent="borders/left"]
position = Vector2( 0, 360 )
shape = SubResource( 3 )

[node name="right" type="StaticBody2D" parent="borders" groups=[
"wall",
]]
position = Vector2( 1280, 0 )
collision_layer = 8
collision_mask = 8

[node name="right_collision_shape" type="CollisionShape2D" parent="borders/right"]
position = Vector2( 0, 360 )
shape = SubResource( 3 )

[node name="enemy_ship" type="KinematicBody2D" parent="." groups=[
"enemy",
]]
position = Vector2( 1300, 200 )
rotation = -1.5708
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="enemy_ship_hitbox" type="CollisionShape2D" parent="enemy_ship"]
shape = SubResource( 4 )

[node name="enemy_ship_sprite" type="Sprite" parent="enemy_ship"]
texture = ExtResource( 6 )

[node name="bullet" parent="." instance=ExtResource( 1 )]

[node name="Boss" parent="." instance=ExtResource( 8 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="DialogueBox" parent="CanvasLayer/UI" index="4"]
script = ExtResource( 11 )

[node name="TextBox" parent="CanvasLayer/UI/DialogueBox" index="1"]
text = "test"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="screen_effect_timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="hit" from="player_ship" to="." method="_on_player_ship_hit"]
[connection signal="hit" from="player_ship" to="CanvasLayer/UI" method="_on_player_ship_hit"]
[connection signal="timeout" from="player_ship/Timer" to="player_ship" method="_on_Timer_timeout"]
[connection signal="hit" from="Boss" to="CanvasLayer/UI" method="_on_Boss_hit"]
[connection signal="game_over" from="CanvasLayer/UI" to="." method="_on_UI_game_over"]
[connection signal="timeout" from="screen_effect_timer" to="." method="_on_screen_effect_timer_timeout"]

[editable path="CanvasLayer/UI"]
